--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 
 * {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family : "Roboto Condensed", sans-serif;
 }
 
-html,
-body {
+html, body {
     height: 100%;
     background-color: #073b4c;
     overflow: hidden;
@@ -15,57 +14,12 @@ body {
 h1 {
     font-weight: bold;
     color: white;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
     padding: 10px 0 10px 0;
-}
-
-.word-area {
-    height: 200px;
-    border-radius: 7px;
-    padding: 20px;
-    background-color: white;
-    margin-bottom: 25px;
 }
 
 #words {
     height: 135px;
     overflow: hidden;
-}
-
-.calculation {
-    display: flex;
-    color: black;
-}
-
-.calculation p {
-    margin-right: 35px;
-    font-size: 16px;
-    border-right: 2px solid #cccccc;
-    padding-right: 20px;
-}
-
-.calculation span {
-    font-size: 25px;
-    padding-left: 10px;
-}
-
-.type-counting {
-    color: #fefae0;
-    margin-right: 20px;
-}
-
-.box-timer {
-    background-color: #ef476f;
-    padding: 10px 20px;
-    position: relative;
-    z-index: 2;
-    color: white;
 }
 
 .container {
@@ -75,14 +29,30 @@ h5 {
     height: 100%;
 }
 
-.btn-custom {
-    background-color: #06d6a0;
-    border: none;
+.word-area {
+    height: 200px;
+    border-radius: 7px;
+    padding: 20px;
+    background-color: white;
+    margin-bottom: 30px;
 }
 
-.btn-custom:hover {
-    background-color: #22223b;
+.calculation {
+    display: flex;
+    color: black;
 }
+
+.calculation p {
+    font-size: 16px;
+    margin-right: 30px;
+    border-right: 2px solid rgb(112, 112, 112);
+    padding-right: 20px;
+}
+
+.btn-custom {
+    background-color: #06d6a0;
+}
+
 
 .bold {
     font-weight: bold;
@@ -94,4 +64,12 @@ h5 {
 
 .red {
     color: #ef476f;
+}
+
+.box-timer {
+    background-color: #ef476f;
+    padding: 10px 20px;
+    position: relative;
+    z-index: 2;
+    color: white;
 }
